Changed computation of averages
For FC and LP there is now no need for an extra file with FCLP_limits_{}.csv - all calculations are done from DF_results_Final.csv. Averages over all SIM runs for every state and specialty. For scatter plot then further average over all states.

--- a/Code/final_plots_and_regression.ipynb
+++ b/Code/final_plots_and_regression.ipynb
@@ -31,9 +31,7 @@
    "outputs": [],
    "source": [
     "def get_cmap(n, name='tab20b'):\n",
-    "    '''\n",
-    "    Returns function that maps numbers to colors. 'name' is a colormap name.\n",
-    "    '''\n",
+    "    ### Returns function that maps numbers to colors. 'name' is a colormap name.\n",
     "    return plt.cm.get_cmap(name, n)"
    ]
   },
@@ -43,10 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### choose limits\n",
-    "LPlimit = 1\n",
-    "FClimit = 20\n",
-    "\n",
+    "### define states and their IDs\n",
     "states = {'state':['Burgenland','Carinthia','Lower Austria','Upper Austria','Salzburg','Styria',\n",
     "                       'Tyrol','Vorarlberg','Vienna'],'state_id':[1,2,3,4,5,6,7,8,9]}"
    ]
@@ -110,10 +105,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### critical limits\n",
-    "FC = pd.read_csv('results/FC_state_specialty_FClimit{}.csv'.format(FClimit))\n",
-    "LP = pd.read_csv('results/LP_state_specialty_LPlimit{}.csv'.format(LPlimit))\n",
+    "### read results dataframe\n",
+    "df = pd.read_csv('results/DF_results_Final.csv')\n",
     "\n",
+    "### select df up to limit\n",
+    "LPlimit = 1\n",
+    "FClimit = 20\n",
+    "\n",
+    "LP = df[df.lost_patients_state<=LPlimit][['run','state','specialty','shock','lost_patients_state','perc_docs_removed']]\n",
+    "FC = df[df.remaining_FC_filled<=FClimit][['run','state','specialty','shock','remaining_FC_filled','perc_docs_removed']]\n",
+    "\n",
+    "### lost patients per state and specialist for selected limit\n",
+    "idx = LP.groupby(['state','specialty','run'])['lost_patients_state'].transform(max) == LP['lost_patients_state']\n",
+    "LP = LP[idx]\n",
+    "LP = LP.sort_values(['state','specialty','run','perc_docs_removed'],ascending=True).drop_duplicates(subset=\n",
+    "        ['state','specialty','run'], keep='last')[['run','state','specialty','shock','lost_patients_state',\n",
+    "                                             'perc_docs_removed']]\n",
+    "\n",
+    "LP.reset_index(drop=True,inplace=True)\n",
+    "\n",
+    "### lost patients per state and specialist for selected limit\n",
+    "idx = FC.groupby(['state','specialty','run'])['remaining_FC_filled'].transform(max) == FC['remaining_FC_filled']\n",
+    "FC = FC[idx]\n",
+    "FC = FC.sort_values(['state','specialty','run','perc_docs_removed'],ascending=True).drop_duplicates(subset=\n",
+    "        ['state','specialty','run'], keep='last')[['run','state','specialty','shock','remaining_FC_filled',\n",
+    "                                             'perc_docs_removed']]\n",
+    "\n",
+    "FC.reset_index(drop=True,inplace=True)\n",
+    "\n",
+    "### mean over all runs\n",
+    "LP = LP.groupby(['state','specialty']).agg({'perc_docs_removed':'mean'}).reset_index()\n",
+    "FC = FC.groupby(['state','specialty']).agg({'perc_docs_removed':'mean'}).reset_index()\n",
+    "\n",
+    "### mean and std over all states\n",
     "FC = FC.groupby('specialty').agg({'perc_docs_removed':['mean','std']})\n",
     "LP = LP.groupby('specialty').agg({'perc_docs_removed':['mean','std']})"
    ]
@@ -156,18 +180,23 @@
     "                 capsize=6, ms=10, capthick=3,elinewidth=2,c=cmap(i))\n",
     "\n",
     "\n",
-    "ax[0].set_xlabel('Removed docs until FC limit [%]',fontsize=font)\n",
-    "ax[0].set_ylabel('Removed docs until LP limit [%]',fontsize=font)\n",
-    "ax[0].set_xlim([6,17])\n",
-    "ax[0].set_ylim([0,50])\n",
+    "ax[0].annotate('a)', xy=(0.03,0.92),xycoords='figure fraction', fontsize=26)\n",
+    "ax[1].annotate('b)', xy=(0.46,0.92),xycoords='figure fraction', fontsize=26)\n",
+    "    \n",
+    "#plt.suptitle('Austria',fontsize=font)\n",
+    "ax[0].set_xlabel(r'$L_{FC}$ [%]',fontsize=font)\n",
+    "ax[0].set_ylabel(r'$L_{LP}$ [%]',fontsize=font)\n",
+    "ax[0].set_xlim([8,20])\n",
+    "ax[0].set_ylim([5,60])\n",
     "\n",
     "\n",
-    "ax[1].set_xlabel('Risk score',fontsize=font)\n",
-    "ax[1].set_ylabel('Benefit score',fontsize=font)\n",
+    "ax[1].set_xlabel('Risk',fontsize=font)\n",
+    "ax[1].set_ylabel('Benefit',fontsize=font)\n",
     "ax[1].set_xlim([0.3,0.9])\n",
     "ax[1].set_ylim([0,1])\n",
-    "plt.legend(doc_list['EN'],bbox_to_anchor=(1.45, 1),fontsize=18)\n",
+    "plt.legend(doc_list['EN'],bbox_to_anchor=(1.4, 1),fontsize=20)\n",
     "plt.tight_layout()\n",
+    "fig.subplots_adjust(wspace=0.25)\n",
     "\n",
     "plt.savefig('figures/Final_Scatter.svg',format='svg')\n",
     "plt.savefig('figures/Final_Scatter.png',format='png',dpi=300)\n",
@@ -225,14 +254,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "docnames = pd.read_csv('specialties.txt', sep=',', header=None)\n",
-    "docnames.columns=['fg','DE','EN']"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -244,14 +265,13 @@
     "font = 26\n",
     "sns.set(font_scale = 2)\n",
     "\n",
-    "for d in range(0,len(doc_list['DE'])):\n",
-    "    doc = doc_list['DE'][d]\n",
-    "    fig, ax = plt.subplots(1,2,figsize=(14,6))\n",
+    "for doc in dta.specialty.unique():\n",
+    "    fig, ax = plt.subplots(1,2,figsize=(14,6.5))\n",
     "    ### lost patients (summed up over shocks!)\n",
     "    sns.lineplot(ax = ax[0], x = 'perc_docs_removed',y = 'lost_patients_state',data=dta[dta.specialty==doc],\n",
     "                 hue='state')\n",
     "    ax[0].set_ylabel('Lost patients [%]',fontsize=font)\n",
-    "    ax[0].set_xlabel('Removed docs in country [%]',fontsize=font)\n",
+    "    ax[0].set_xlabel('Removed physicians [%]',fontsize=font)\n",
     "    ax[0].plot([0,100],[LPlimit,LPlimit],'k--')\n",
     "\n",
     "\n",
@@ -259,18 +279,29 @@
     "    sns.lineplot(ax = ax[1], data = dta[dta.specialty==doc], x = 'perc_docs_removed',y = 'remaining_FC_filled',\n",
     "                 hue = 'state',legend=False)\n",
     "    ax[1].set_ylabel('Free capacity filled [%]',fontsize=font)\n",
-    "    ax[1].set_xlabel('Removed docs in country [%]',fontsize=font)\n",
+    "    ax[1].set_xlabel('Removed physicians [%]',fontsize=font)\n",
     "    ax[1].plot([0,100],[FClimit,FClimit],'k--')\n",
     "\n",
-    "    plt.suptitle(doc_list['EN'][d],fontsize=font)\n",
+    "    \n",
+    "    ax[0].annotate('a)', xy=(0.03,0.86),xycoords='figure fraction', fontsize=22)\n",
+    "    ax[1].annotate('b)', xy=(0.51,0.86),xycoords='figure fraction', fontsize=22)\n",
+    "\n",
+    "    plt.suptitle(docnames.loc[docnames.fg==doc,'EN'].item(),fontsize=font)\n",
     "    ax[0].legend(loc='upper left',fontsize=font-10)\n",
     "    plt.tight_layout(h_pad=2)\n",
-    "    plt.subplots_adjust(top=0.9)\n",
+    "    plt.subplots_adjust(top=0.85)\n",
     "\n",
     "    plt.savefig('figures/LPFC_states_main_{}.svg'.format(doc),bbox_inches = 'tight',format = 'svg')\n",
     "    plt.savefig('figures/LPFC_states_main_{}.PNG'.format(doc),bbox_inches = 'tight',format = 'png',dpi=200)\n",
     "    plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -286,8 +317,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FC = pd.read_csv('results/FC_state_specialty_FClimit{}.csv'.format(FClimit))\n",
-    "LP = pd.read_csv('results/LP_state_specialty_LPlimit{}.csv'.format(LPlimit))"
+    "df = pd.read_csv('results/DF_results_Final.csv')\n",
+    "\n",
+    "### select df up to limit\n",
+    "LPlimit = 1\n",
+    "FClimit = 20\n",
+    "\n",
+    "LP = df[df.lost_patients_state<=LPlimit][['run','state','specialty','shock','lost_patients_state','perc_docs_removed']]\n",
+    "FC = df[df.remaining_FC_filled<=FClimit][['run','state','specialty','shock','remaining_FC_filled','perc_docs_removed']]"
    ]
   },
   {
@@ -296,7 +333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### reanem to english\n",
+    "### rename to english states\n",
     "LP.loc[LP.state=='Kärnten','state'] = 'Carinthia'\n",
     "LP.loc[LP.state=='Niederösterreich','state'] = 'Lower Austria'\n",
     "LP.loc[LP.state=='Oberösterreich','state'] = 'Upper Austria'\n",
@@ -318,6 +355,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "### lost patients per state and specialist for selected limit\n",
+    "idx = LP.groupby(['state','specialty','run'])['lost_patients_state'].transform(max) == LP['lost_patients_state']\n",
+    "LP = LP[idx]\n",
+    "LP = LP.sort_values(['state','specialty','run','perc_docs_removed'],ascending=True).drop_duplicates(subset=\n",
+    "        ['state','specialty','run'], keep='last')[['run','state','specialty','shock','lost_patients_state',\n",
+    "                                             'perc_docs_removed']]\n",
+    "\n",
+    "LP.reset_index(drop=True,inplace=True)\n",
+    "\n",
+    "### lost patients per state and specialist for selected limit\n",
+    "idx = FC.groupby(['state','specialty','run'])['remaining_FC_filled'].transform(max) == FC['remaining_FC_filled']\n",
+    "FC = FC[idx]\n",
+    "FC = FC.sort_values(['state','specialty','run','perc_docs_removed'],ascending=True).drop_duplicates(subset=\n",
+    "        ['state','specialty','run'], keep='last')[['run','state','specialty','shock','remaining_FC_filled',\n",
+    "                                             'perc_docs_removed']]\n",
+    "\n",
+    "FC.reset_index(drop=True,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### mean and stand.deviation nof perc_docs_removed over all runs\n",
+    "LP = LP.groupby(['state','specialty']).agg({'perc_docs_removed':['mean','std']}).reset_index()\n",
+    "FC = FC.groupby(['state','specialty']).agg({'perc_docs_removed':['mean','std']}).reset_index()\n",
+    "\n",
+    "### drop multicolumns names\n",
+    "LP.columns = ['state','specialty','perc_docs_removed_mean','perc_docs_removed_std']\n",
+    "FC.columns = ['state','specialty','perc_docs_removed_mean','perc_docs_removed_std']\n",
+    "\n",
+    "### add info on state ID\n",
+    "states = {'state':['Burgenland','Kärnten','Niederösterreich','Oberösterreich',\n",
+    "                       'Salzburg','Steiermark','Tirol','Vorarlberg','Wien'],'state_id':[1,2,3,4,5,6,7,8,9]}\n",
+    "\n",
+    "LP['state_ID'] = 0\n",
+    "FC['state_ID'] = 0\n",
+    "for s,i in zip(states['state'],states['state_id']):\n",
+    "    LP.loc[LP.state==s,'state_ID'] = i\n",
+    "    FC.loc[FC.state==s,'state_ID'] = i\n",
+    "\n",
+    "### switch order\n",
+    "LP = LP[['state', 'state_ID', 'specialty','perc_docs_removed_mean','perc_docs_removed_std']]\n",
+    "FC = FC[['state', 'state_ID', 'specialty','perc_docs_removed_mean','perc_docs_removed_std']]\n",
+    "\n",
     "### dataframes for heatmaps\n",
     "LPheat = pd.DataFrame(columns = LP.state.unique(),index = doc_list['EN'])\n",
     "FCheat = pd.DataFrame(columns = LP.state.unique(),index = doc_list['EN'])\n",
@@ -325,10 +409,13 @@
     "### fill in\n",
     "for fg in doc_list['EN']:\n",
     "    for st in LP.state.unique():\n",
-    "        LPheat.loc[fg,st] = float(LP.loc[(LP.state==st)&(LP.specialty==doc_list['DE'][doc_list['EN'].index(fg)]),'perc_docs_removed'].item())\n",
-    "        FCheat.loc[fg,st] = float(FC.loc[(FC.state==st)&(FC.specialty==doc_list['DE'][doc_list['EN'].index(fg)]),'perc_docs_removed'].item())\n",
+    "        LPheat.loc[fg,st] = float(LP.loc[(LP.state==st)&(LP.specialty==doc_list['DE'][doc_list['EN'].index(fg)]),'perc_docs_removed_mean'].item())\n",
+    "        FCheat.loc[fg,st] = float(FC.loc[(FC.state==st)&(FC.specialty==doc_list['DE'][doc_list['EN'].index(fg)]),'perc_docs_removed_mean'].item())\n",
     "        LPheat[st] = LPheat[st].astype(float)\n",
-    "        FCheat[st] = FCheat[st].astype(float)"
+    "        FCheat[st] = FCheat[st].astype(float)\n",
+    "\n",
+    "FCheat = FCheat.sort_values(by='Burgenland')\n",
+    "LPheat = LPheat.reindex(FCheat.index.values)"
    ]
   },
   {
@@ -341,25 +428,35 @@
     "sns.set(font_scale=1)\n",
     "f, (ax1,ax2) = plt.subplots(1,2,figsize=(16,6))\n",
     "\n",
-    "h1 = sns.heatmap(FCheat,annot=True,linewidths=0.5,vmin=0,cmap='Greys',ax=ax1,cbar_kws={'label':'Removed docs [%]'})\n",
+    "h1 = sns.heatmap(FCheat,annot=True,linewidths=0.5,vmin=0,vmax=np.ceil(FCheat.max().max()),cmap='cividis',ax=ax1,cbar_kws={'label':'Removed physicians [%]'})\n",
     "ax1.xaxis.tick_top()\n",
     "h1.set_yticklabels(h1.get_yticklabels(),rotation=0,fontsize=14)\n",
     "h1.set_xticklabels(h1.get_xticklabels(),rotation=45,fontsize=14,horizontalalignment='left')\n",
-    "h1.set_title('Free capacity limit',fontsize=18, y=-0.1)\n",
-    "h1.figure.axes[-1].yaxis.label.set_size(16)\n",
+    "h1.set_title(r'$L_{FC}$',fontsize=18, y=-0.1)\n",
+    "h1.figure.axes[-1].yaxis.label.set_size(18)\n",
     "\n",
-    "h2 = sns.heatmap(LPheat,annot=True,linewidths=0.5,vmin=0,cmap='Greens',ax=ax2,\n",
-    "                 cbar_kws={'label':'Removed docs [%]'})\n",
+    "h2 = sns.heatmap(LPheat,annot=True,linewidths=0.5,vmin=0,vmax=np.ceil(LPheat.max().max()),cmap='viridis',ax=ax2,\n",
+    "                 cbar_kws={'label':'Removed physicians [%]'})\n",
     "ax2.xaxis.tick_top()\n",
     "h2.set_yticklabels(h2.get_yticklabels(),rotation=0,fontsize=14)\n",
     "h2.set_xticklabels(h2.get_xticklabels(),rotation=45,fontsize=14,horizontalalignment='left')\n",
-    "h2.set_title('Lost patiens limit',fontsize=18, y=-0.1)\n",
-    "h2.figure.axes[-1].yaxis.label.set_size(16)\n",
+    "h2.set_title(r'$L_{LP}$',fontsize=18, y=-0.1)\n",
+    "h2.figure.axes[-1].yaxis.label.set_size(18)\n",
+    "\n",
+    "ax1.annotate('a)', xy=(0.045,0.92),xycoords='figure fraction', fontsize=22)\n",
+    "ax2.annotate('b)', xy=(0.53,0.92),xycoords='figure fraction', fontsize=22)\n",
     "\n",
     "plt.savefig('figures/LPFC_heatmap.svg',bbox_inches = 'tight',format = 'svg')\n",
     "plt.savefig('figures/LPFC_heatmap.PNG',bbox_inches = 'tight',format = 'png',dpi=200)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -393,15 +490,15 @@
     "    for d in FC.specialty.unique():\n",
     "        # risk & benefit\n",
     "        FC.loc[(FC.state_ID==st)&(FC.specialty==d),'RiskScore'] = final_gr.loc[(final_gr.state_ID==st)&\n",
-    "                                                                              (final_gr.fg==d),('Risk','mean')]\n",
+    "                                                                        (final_gr.fg==d),('Risk','mean')].item()\n",
     "        FC.loc[(FC.state_ID==st)&(FC.specialty==d),'BenefitScore'] = final_gr.loc[(final_gr.state_ID==st)&\n",
-    "                                                                              (final_gr.fg==d),('Benefit','mean')]\n",
+    "                                                                        (final_gr.fg==d),('Benefit','mean')].item()\n",
     "        \n",
     "        # LP & FC\n",
     "        FC.loc[(FC.state_ID==st)&(FC.specialty==d),'FC'] = FC.loc[(FC.state_ID==st)&(FC.specialty==d),\n",
-    "                                                                  'perc_docs_removed']\n",
+    "                                                                  'perc_docs_removed'].item()\n",
     "        FC.loc[(FC.state_ID==st)&(FC.specialty==d),'LP'] = LP.loc[(LP.state_ID==st)&(LP.specialty==d),\n",
-    "                                                                  'perc_docs_removed']"
+    "                                                                  'perc_docs_removed'].item()"
    ]
   },
   {
