--- a/Code/analyze_results_dataframe.ipynb
+++ b/Code/analyze_results_dataframe.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,14 +136,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "iterations = 100     # number of sim iterations\n",
     "shocks = 5000        # number of maximum doctors to remove\n",
     "remov = 1            # number of docs removed in each step\n",
-    "alpha = 0.0          # teleportation probability\n",
+    "alpha = 0          # teleportation probability\n",
     "max_steps = 10       # max steps for patients before becoming lost\n",
     "kd = 1               # keep disconnected doctors 0/1\n",
     "threshold = 0.9      # capacity threshold for calculation\n",
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,13 +162,6 @@
     "res = analyze_results(iterations,shocks,remov,alpha,max_steps,threshold,kd,max_dist,\n",
     "                    max_dist_trials,min_pats)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -180,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,18 +199,11 @@
     "    'lost_patients_state','remaining_FC_filled','perc_docs_removed','num_unique_docs']].round(2).reset_index()\n",
     "res_grouped.to_csv('results/DF_results_mean_Final.csv',index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -231,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
