Fixed bugs in analyze_results and plotting
Additionally speed up for municipality distance matrix

--- a/Code/analyze_results_dataframe.ipynb
+++ b/Code/analyze_results_dataframe.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,6 +81,7 @@
     "                                'state','specialty','lost_patients_country','incorrect_displacements',\n",
     "                                'N_lost_patients_state_summed'])\n",
     "\n",
+    "    ### for all specialists and states, add info on LP and FC\n",
     "    for doc in doctors:  \n",
     "        ### read in the data file\n",
     "        sim_params = 'patient_dynamics_iter{}_shocks{}_remove{}_alpha{}_maxs{}_th{}_kd{}_maxdist{}_maxdisttrials{}_minpats{}_{}_Final_.csv'\\\n",
@@ -106,11 +107,12 @@
     "\n",
     "    dta.reset_index(drop=True,inplace=True)\n",
     "\n",
-    "\n",
+    "    ### add number of unique doctors per specialty\n",
     "    dta['num_unique_docs'] = 0\n",
     "    for doc in doctors:\n",
     "        dta.loc[(dta.specialty == doc),'num_unique_docs'] = N.loc[:,doc+'_unique_docs'].sum() \n",
     "\n",
+    "    ### the % of removed doctors based on total number\n",
     "    dta['perc_docs_removed'] = dta.shock / dta.num_unique_docs * 100\n",
     "        \n",
     "    \n",
@@ -136,14 +138,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "iterations = 100     # number of sim iterations\n",
     "shocks = 5000        # number of maximum doctors to remove\n",
     "remov = 1            # number of docs removed in each step\n",
-    "alpha = 0          # teleportation probability\n",
+    "alpha = 0            # teleportation probability (try 0 or 0.0 if error - formatting issue)\n",
     "max_steps = 10       # max steps for patients before becoming lost\n",
     "kd = 1               # keep disconnected doctors 0/1\n",
     "threshold = 0.9      # capacity threshold for calculation\n",
@@ -154,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,20 +166,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Results for table in paper\n",
-    "* for every state & specialist when limit for LP and FC are reached"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_copy = res.copy()"
+    "res.to_csv('results/DF_results_Final.csv',index=False)"
    ]
   },
   {
@@ -185,25 +179,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "res_copy.to_csv('results/DF_results_Final.csv',index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res_grouped = res_copy.groupby(['state','specialty','shock']).mean()[['avg_displacement',\n",
-    "    'lost_patients_state','remaining_FC_filled','perc_docs_removed','num_unique_docs']].round(2).reset_index()\n",
-    "res_grouped.to_csv('results/DF_results_mean_Final.csv',index=False)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -217,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
