--- a/Code/final_plots_and_regression.ipynb
+++ b/Code/final_plots_and_regression.ipynb
@@ -30,6 +30,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sns.set(font_scale = 2.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_cmap(n, name='tab20b'):\n",
     "    ### Returns function that maps numbers to colors. 'name' is a colormap name.\n",
     "    return plt.cm.get_cmap(name, n)"
@@ -43,59 +52,22 @@
    "source": [
     "### define states and their IDs\n",
     "states = {'state':['Burgenland','Carinthia','Lower Austria','Upper Austria','Salzburg','Styria',\n",
-    "                       'Tyrol','Vorarlberg','Vienna'],'state_id':[1,2,3,4,5,6,7,8,9]}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                       'Tyrol','Vorarlberg','Vienna'],'state_id':[1,2,3,4,5,6,7,8,9]}\n",
+    "\n",
     "### english short name versions\n",
     "doc_list = {'DE':['AM', 'AU', 'CH', 'DER', 'GGH', 'HNO', 'IM', 'KI', 'NEU', 'ORTR','PSY', 'RAD', 'URO'],\n",
-    "            'EN':['GP','OPH','SRG','DER','OBGYN','ENT','IM','PED','NEU','ORTH','PSY','RAD','URO']}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sns.set(font_scale = 2.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "            'EN':['GP','OPH','SRG','DER','OBGYN','ENT','IM','PED','NEU','ORTH','PSY','RAD','URO']}\n",
+    "\n",
     "### read risk benefit file and node list file of network\n",
     "risk_benefit = pd.read_csv('results/Risk_Benefit_table.csv')\n",
     "NL = pd.read_csv('results/PSNW_NodeList.csv',encoding='ISO-8859-15')\n",
-    "final = NL.join(risk_benefit.set_index('docid'),on='docid').drop(columns='specialty')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "final = NL.join(risk_benefit.set_index('docid'),on='docid').drop(columns='specialty')\n",
+    "\n",
     "### risk and benefit\n",
     "final_gr = final.groupby('fg').agg({'Risk':['mean','std'],'Benefit':['mean','std']}) * (-1)\n",
     "final_gr.loc[:,('Risk','std')] = final_gr.Risk['std'].values*(-1)\n",
-    "final_gr.loc[:,('Benefit','std')] = final_gr.Benefit['std'].values*(-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "final_gr.loc[:,('Benefit','std')] = final_gr.Benefit['std'].values*(-1)\n",
+    "\n",
     "final_gr = final.groupby(['state_ID','fg']).agg({'Risk':['mean','std'],'Benefit':['mean','std']}).reset_index()"
    ]
   },
@@ -180,6 +152,7 @@
     "                 capsize=6, ms=10, capthick=3,elinewidth=2,c=cmap(i))\n",
     "\n",
     "\n",
+    "### add a) b) to panels\n",
     "ax[0].annotate('a)', xy=(0.03,0.92),xycoords='figure fraction', fontsize=26)\n",
     "ax[1].annotate('b)', xy=(0.46,0.92),xycoords='figure fraction', fontsize=26)\n",
     "    \n",
@@ -220,27 +193,13 @@
     "# information selection criteria\n",
     "patient_type = 'total'\n",
     "capacity_type = 'hour-based'\n",
-    "timeframe = 'quarterly'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "timeframe = 'quarterly'\n",
+    "\n",
     "### read doc info and sim info\n",
     "N = pd.read_excel('results/states_doc_info_{}_{}_{}.xlsx'.format(patient_type, capacity_type, timeframe))\n",
     "dta = pd.read_csv('results/DF_results_Final.csv')\n",
-    "N.set_index('state',inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "N.set_index('state',inplace=True)\n",
+    "\n",
     "### rename states to english\n",
     "dta.loc[dta.state=='Burgenland','state'] = 'Burgenland'\n",
     "dta.loc[dta.state=='Kärnten','state'] = 'Carinthia'\n",
@@ -282,11 +241,11 @@
     "    ax[1].set_xlabel('Removed physicians [%]',fontsize=font)\n",
     "    ax[1].plot([0,100],[FClimit,FClimit],'k--')\n",
     "\n",
-    "    \n",
+    "    ### add a) b) to panels\n",
     "    ax[0].annotate('a)', xy=(0.03,0.86),xycoords='figure fraction', fontsize=22)\n",
     "    ax[1].annotate('b)', xy=(0.51,0.86),xycoords='figure fraction', fontsize=22)\n",
     "\n",
-    "    plt.suptitle(docnames.loc[docnames.fg==doc,'EN'].item(),fontsize=font)\n",
+    "    plt.suptitle(doc_list['EN'][doc_list['DE'].index(doc)],fontsize=font)\n",
     "    ax[0].legend(loc='upper left',fontsize=font-10)\n",
     "    plt.tight_layout(h_pad=2)\n",
     "    plt.subplots_adjust(top=0.85)\n",
@@ -317,6 +276,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "### read results dataframe \n",
     "df = pd.read_csv('results/DF_results_Final.csv')\n",
     "\n",
     "### select df up to limit\n",
@@ -324,15 +284,8 @@
     "FClimit = 20\n",
     "\n",
     "LP = df[df.lost_patients_state<=LPlimit][['run','state','specialty','shock','lost_patients_state','perc_docs_removed']]\n",
-    "FC = df[df.remaining_FC_filled<=FClimit][['run','state','specialty','shock','remaining_FC_filled','perc_docs_removed']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "FC = df[df.remaining_FC_filled<=FClimit][['run','state','specialty','shock','remaining_FC_filled','perc_docs_removed']]\n",
+    "\n",
     "### rename to english states\n",
     "LP.loc[LP.state=='Kärnten','state'] = 'Carinthia'\n",
     "LP.loc[LP.state=='Niederösterreich','state'] = 'Lower Austria'\n",
@@ -428,6 +381,7 @@
     "sns.set(font_scale=1)\n",
     "f, (ax1,ax2) = plt.subplots(1,2,figsize=(16,6))\n",
     "\n",
+    "### heatmap for free capacity\n",
     "h1 = sns.heatmap(FCheat,annot=True,linewidths=0.5,vmin=0,vmax=np.ceil(FCheat.max().max()),cmap='cividis',ax=ax1,cbar_kws={'label':'Removed physicians [%]'})\n",
     "ax1.xaxis.tick_top()\n",
     "h1.set_yticklabels(h1.get_yticklabels(),rotation=0,fontsize=14)\n",
@@ -435,6 +389,8 @@
     "h1.set_title(r'$L_{FC}$',fontsize=18, y=-0.1)\n",
     "h1.figure.axes[-1].yaxis.label.set_size(18)\n",
     "\n",
+    "\n",
+    "### heatmap for lost patients\n",
     "h2 = sns.heatmap(LPheat,annot=True,linewidths=0.5,vmin=0,vmax=np.ceil(LPheat.max().max()),cmap='viridis',ax=ax2,\n",
     "                 cbar_kws={'label':'Removed physicians [%]'})\n",
     "ax2.xaxis.tick_top()\n",
@@ -443,6 +399,7 @@
     "h2.set_title(r'$L_{LP}$',fontsize=18, y=-0.1)\n",
     "h2.figure.axes[-1].yaxis.label.set_size(18)\n",
     "\n",
+    "### add a) b) to panels\n",
     "ax1.annotate('a)', xy=(0.045,0.92),xycoords='figure fraction', fontsize=22)\n",
     "ax2.annotate('b)', xy=(0.53,0.92),xycoords='figure fraction', fontsize=22)\n",
     "\n",
